--- a/src/components/Profile/profile.css
+++ b/src/components/Profile/profile.css
@@ -22,15 +22,15 @@
 }
 
 .tag, .location {
-font-size: 20px;
+font-size: 18px;
 font-weight: 500;
-color:darkgray;
+color:rgb(149, 148, 148);
 margin: 0;
 margin-bottom: 10px;
 }
 
 .avatar {
-    max-width: 200px;
+    max-width: 150px;
     margin-bottom: 30px;
     border-radius: 50%;
     background-color: black;
@@ -42,20 +42,26 @@ margin-bottom: 10px;
     flex-wrap: nowrap;
    justify-content: stretch;
    text-align: center;
-   background-color: rgb(248, 243, 243);
+   background-color: rgb(242, 242, 248);
+   border-top:  1px  solid rgb(222, 217, 217);
+   border-bottom-right-radius: 10px;
+   border-bottom-left-radius: 10px;
 }
 
 .stats__item {
     display: inline-block;
-    border: 1px solid rgb(222, 217, 217);
     flex-basis: calc((100%) / 3);
     padding-top: 30px;
     padding-bottom: 30px;
 }
 
+.stats__item:not(:last-child){
+    border-right: 1px  solid rgb(222, 217, 217);
+}
+
 .label {
     display: block;
-    color: gray;
+    color: rgb(149, 148, 148);
     font-weight: 500;
     font-size: 16px;
     margin-bottom: 10px;
