--- a/src/components/Profile/Profile.module.css
+++ b/src/components/Profile/Profile.module.css
@@ -4,6 +4,7 @@
     display: block;
     margin-left: auto;
     margin-right: auto;
+    margin-bottom: 50px;
     width: fit-content; 
     background-color: white;
 }
