--- a/src/components/FriendListItem/FriendListItem.module.css
+++ b/src/components/FriendListItem/FriendListItem.module.css
@@ -23,9 +23,20 @@
     width: 15px;
     height: 15px;
     border-radius: 50%;
+    background-color: gray;
+}
+
+.online{
     background-color: green;
+}
+
+.offline{
+    background-color: tomato;
 }
 
 .avatar {
     margin-left: 10px;
+    padding: 3px;
+    border-radius: 5px;
+    background-color: rgb(201, 213, 175);
 }
