--- a/src/components/FriendListItem/FriendListItem.module.css
+++ b/src/components/FriendListItem/FriendListItem.module.css
@@ -1,42 +1,43 @@
-
 .item {
-    display: flex;
-    flex-wrap: nowrap;
-    align-items: center;
-    padding: 5px 10px 5px 10px;
-    background-color: white;
-    border-radius: 5px;
-    box-shadow: 0px 0px 10px 4px rgba(0, 0, 0, 0.48);
+  display: flex;
+  flex-wrap: nowrap;
+  align-items: center;
+  padding: 5px 10px 5px 10px;
+  background-color: white;
+  border-radius: 5px;
+  box-shadow: 0px 0px 10px 4px rgba(0, 0, 0, 0.48);
 }
 
-.item:not(:last-child){
-    margin-bottom: 15px;
+.item:not(:last-child) {
+  margin-bottom: 15px;
 }
 
 .name {
-    font-size: 18px;
-    font-weight: 500;
-    margin-left: 10px;
+  font-size: 18px;
+  font-weight: 500;
+  margin-left: 10px;
 }
 
 .status {
-    width: 15px;
-    height: 15px;
-    border-radius: 50%;
-    background-color: gray;
+  width: 15px;
+  height: 15px;
+  border-radius: 50%;
+  background-color: gray;
 }
 
-.online{
-    background-color: green;
+.online {
+  composes: status;
+  background-color: green;
 }
 
-.offline{
-    background-color: tomato;
+.offline {
+  composes: status;
+  background-color: tomato;
 }
 
 .avatar {
-    margin-left: 10px;
-    padding: 3px;
-    border-radius: 5px;
-    background-color: rgb(201, 213, 175);
+  margin-left: 10px;
+  padding: 3px;
+  border-radius: 5px;
+  background-color: rgb(201, 213, 175);
 }
